Fix to align sticky header to right when number

--- a/packages/ketchup/src/components/kup-data-table/kup-data-table.scss
+++ b/packages/ketchup/src/components/kup-data-table/kup-data-table.scss
@@ -751,6 +751,7 @@ sticky-header {
   }
 
   .column-title {
+    width: 100%;
     font-weight: bold;
     margin: 0 0.3125rem;
     white-space: nowrap;
